GUI event edit update